// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ImagePreviewer {...props} />: elements tree structures with default props 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
>
  <Img
    loader={false}
    onClick={[Function]}
    src="http://pic.example.com/200/200"
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
    unloader={false}
    width="90%"
  />
</div>
`;

exports[`<ImagePreviewer {...props} />: elements tree structures with initialOpen controlled 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
>
  <Img
    initialOpen={true}
    loader={false}
    onClick={[Function]}
    src="http://pic.example.com/200/200"
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
    unloader={false}
    width="90%"
  />
  <ReactImageLightbox
    animationDisabled={false}
    animationDuration={300}
    animationOnKeyInput={false}
    clickOutsideToClose={true}
    discourageDownloads={false}
    enableZoom={true}
    imagePadding={10}
    keyRepeatKeyupBonus={40}
    keyRepeatLimit={180}
    mainSrc="http://pic.example.com/200/200"
    onAfterOpen={[Function]}
    onCloseRequest={[Function]}
    onImageLoadError={[Function]}
    onMoveNextRequest={[Function]}
    onMovePrevRequest={[Function]}
    reactModalStyle={Object {}}
  />
</div>
`;
